2009-04-08  kitone  <kitone@gna.org>

	* src/vp/videoplayer.cc:
	* src/vp/videoplayer.h:
	Fix: bug #12682 : 0.30.0 deleting a subtitle while playing throws segfault.

2009-04-08  kitone  <kitone@gna.org>

	* src/document.cc:
	Add debug message to emit_signal function.

2009-03-27  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/Latn-fr.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Makefile.am:
	New French pattern file.

2009-03-27  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/confirmationpage.h:
	Used the CellRendererCustom with multiline support.

2009-03-27  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gui/cellrenderercustom.cc:
	* src/gui/cellrenderercustom.h:
	* src/gui/textviewcell.cc:
	* src/gui/textviewcell.h:
	* src/subtitleview.cc:
	New files cellrenderercustom and textviewcell.
	Extract and cleanup the code from subtitleview to new files.

2009-03-19  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/overlapping.h:
	Fix: bug #13069 : Error checker reports back-to-back subtitles as "overlapping".
	Patch: Frank Luithle <sigi>

2009-01-22  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/Latn.common-error.se-pattern.in:
	Fix: sentence rule.

2009-01-21  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	* plugins/actions/textcorrection/Latn-en-US.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Latn-en.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Latn-en.hearing-impaired.se-pattern.in:
	* plugins/actions/textcorrection/Latn.common-error.se-pattern.in:
	* plugins/actions/textcorrection/Latn.hearing-impaired.se-pattern.in:
	* plugins/actions/textcorrection/Makefile.am:
	* plugins/actions/textcorrection/Zyyy.common-error.se-pattern.in:
	* plugins/actions/textcorrection/assistant-text-correction.glade:
	* plugins/actions/textcorrection/commonerrorpage.h:
	* plugins/actions/textcorrection/confirmationpage.h: